MongoDB persistence implementation